--- a/css/screen.css
+++ b/css/screen.css
@@ -208,10 +208,15 @@ label {
 /* ===== STATE STYLES ======= */
 
 body{
+	background-color: #ababab;
 	font-family: "Cedarville Cursive", cursive;
-	font-weight: 400;
-	font-style: normal;
+	text-align: center;
 	color: #999999
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+	padding: 1rem;
 }
 
 form{
