--- a/css/screen.css
+++ b/css/screen.css
@@ -272,7 +272,7 @@ input[type="checkbox"]{
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	width: 100%
+	width: 100%;
 	max-width: 300px;
 }
 
